All the function names and stuff updated

--- a/Testing/profile_test.Rmd
+++ b/Testing/profile_test.Rmd
@@ -61,7 +61,7 @@ The majority of the time is spent on apply function using multtest's built in fu
 * updateProgress = NULL
 
 ```{r}
-power.blockedRCT.2(M = 5, MDES = 0.125, numFalse = 3 , J = 10 , n.j = 10, R2.1 = 0.5 , p = 0.5 , alpha = 0.05 , numCovar.1 = 5 , numCovar.2 = NULL, ICC = NULL, tnum = 10000, snum = 10, updateProgress = NULL)
+power_blocked_i1_2c(M = 5, MDES = 0.125, numFalse = 3 , J = 10 , n.j = 10, R2.1 = 0.5 , p = 0.5 , alpha = 0.05 , numCovar.1 = 5 , numCovar.2 = NULL, ICC = NULL, tnum = 10000, snum = 10, updateProgress = NULL)
 ```
 
 ### Test case 2 for Power
@@ -85,7 +85,7 @@ Again, the majority of the time is spent on apply function using multtest's buil
 * updateProgress = NULL
 
 ```{r}
-power.blockedRCT.2(M = 10, MDES = 0.125, numFalse = 3 , J = 10 , n.j = 100, R2.1 = 0.5 , p = 0.5 , alpha = 0.05 , numCovar.1 = 5 , numCovar.2 = NULL, ICC = NULL, tnum = 10000, snum = 10, updateProgress = NULL)
+power_blocked_i1_2c(M = 10, MDES = 0.125, numFalse = 3 , J = 10 , n.j = 100, R2.1 = 0.5 , p = 0.5 , alpha = 0.05 , numCovar.1 = 5 , numCovar.2 = NULL, ICC = NULL, tnum = 10000, snum = 10, updateProgress = NULL)
 ```
 
 ### Test case 3 for Power
@@ -110,7 +110,7 @@ This leads to a significant increase in the computation time up to **22** second
 * updateProgress = NULL
 
 ```{r}
-power.blockedRCT.2(M = 10, MDES = 0.125, numFalse = 3 , J = 10 , n.j = 100, R2.1 = 0.5 , p = 0.5 , alpha = 0.05 , numCovar.1 = 5 , numCovar.2 = NULL, ICC = NULL, tnum = 10000, snum = 100, updateProgress = NULL)
+power_blocked_i1_2c(M = 10, MDES = 0.125, numFalse = 3 , J = 10 , n.j = 100, R2.1 = 0.5 , p = 0.5 , alpha = 0.05 , numCovar.1 = 5 , numCovar.2 = NULL, ICC = NULL, tnum = 10000, snum = 100, updateProgress = NULL)
 ```
 
 ### Test case 4 for Power
@@ -133,7 +133,7 @@ In test case 4, we have increased some of the baseline parameters such as M, J a
 * updateProgress = NULL
 
 ```{r}
-power.blockedRCT.2(M = 10, MDES = 0.125, numFalse = 3 , J = 10 , n.j = 100, R2.1 = 0.5 , p = 0.5 , alpha = 0.05 , numCovar.1 = 5 , numCovar.2 = NULL, ICC = NULL, tnum = 10000, snum = 200, updateProgress = NULL)
+power_blocked_i1_2c(M = 10, MDES = 0.125, numFalse = 3 , J = 10 , n.j = 100, R2.1 = 0.5 , p = 0.5 , alpha = 0.05 , numCovar.1 = 5 , numCovar.2 = NULL, ICC = NULL, tnum = 10000, snum = 200, updateProgress = NULL)
 ```
 
 
@@ -157,7 +157,7 @@ In test case 5, we have maintained the same parameters as before except the samp
 * updateProgress = NULL
 
 ```{r}
-power.blockedRCT.2(M = 10, MDES = 0.125, numFalse = 3 , J = 50 , n.j = 100, R2.1 = 0.5 , p = 0.5 , alpha = 0.05 , numCovar.1 = 5 , numCovar.2 = NULL, ICC = NULL, tnum = 10000, snum = 500, updateProgress = NULL)
+power_blocked_i1_2c(M = 10, MDES = 0.125, numFalse = 3 , J = 50 , n.j = 100, R2.1 = 0.5 , p = 0.5 , alpha = 0.05 , numCovar.1 = 5 , numCovar.2 = NULL, ICC = NULL, tnum = 10000, snum = 500, updateProgress = NULL)
 ```
 
 ### Test case 6 for Power
@@ -180,7 +180,7 @@ In test case 6, we change the number of clusters used to run the power calculati
 * updateProgress = NULL
 
 ```{r}
-power.blockedRCT.2(M = 10, MDES = 0.125, numFalse = 3 , J = 50 , n.j = 100, R2.1 = 0.5 , p = 0.5 , alpha = 0.05 , numCovar.1 = 5 , numCovar.2 = NULL, ICC = NULL, tnum = 10000, snum = 500, updateProgress = NULL)
+power_blocked_i1_2c(M = 10, MDES = 0.125, numFalse = 3 , J = 50 , n.j = 100, R2.1 = 0.5 , p = 0.5 , alpha = 0.05 , numCovar.1 = 5 , numCovar.2 = NULL, ICC = NULL, tnum = 10000, snum = 500, updateProgress = NULL)
 ```
 
 ### Test case 7 for Power
@@ -203,7 +203,7 @@ Number of clusters is back to 2 but, the sample number for Westfall-Young is dou
 * updateProgress = NULL
 
 ```{r}
-power.blockedRCT.2(M = 10, MDES = 0.125, numFalse = 3 , J = 50 , n.j = 100, R2.1 = 0.5 , p = 0.5 , alpha = 0.05 , numCovar.1 = 5 , numCovar.2 = NULL, ICC = NULL, tnum = 10000, snum = 1000, updateProgress = NULL)
+power_blocked_i1_2c(M = 10, MDES = 0.125, numFalse = 3 , J = 50 , n.j = 100, R2.1 = 0.5 , p = 0.5 , alpha = 0.05 , numCovar.1 = 5 , numCovar.2 = NULL, ICC = NULL, tnum = 10000, snum = 1000, updateProgress = NULL)
 ```
 
 ## Summary for MDES speed profiles for BH
@@ -231,7 +231,7 @@ We have set the statistical power to be at 0.75 with the power definition set. T
 * power.definition = indiv
 
 ```{r}
-MDES.blockedRCT.2(M = 5, numFalse = 5, J = 10, n.j = 10, power = 0.75, power.definition = "indiv", MTP = "BH", marginError = 0.05, p = 0.5, alpha = 0.05, numCovar.1 = 5, numCovar.2 = NULL, R2.1 = 0.5, R2.2 = 0, ICC = 0, mod.type = "constant", rho = 0.99, omega = NULL,tnum = 10000, snum = 10, ncl = 2, updateProgress = NULL)
+mdes_blocked_i1_2c(M = 5, numFalse = 5, J = 10, n.j = 10, power = 0.75, power.definition = "indiv", MTP = "BH", marginError = 0.05, p = 0.5, alpha = 0.05, numCovar.1 = 5, numCovar.2 = NULL, R2.1 = 0.5, R2.2 = 0, ICC = 0, mod.type = "constant", rho = 0.99, omega = NULL,tnum = 10000, snum = 10, ncl = 2, updateProgress = NULL)
 ```
 
 ### Test case 2 for MDES-BH-indiv speed profile
@@ -255,7 +255,7 @@ Here we increase the harmoninc mean to 100. The elapsed time for computing MDES 
 
 
 ```{r}
-MDES.blockedRCT.2(M = 10, numFalse = 5, J = 10, n.j = 100, power = 0.75, power.definition = "indiv", MTP = "BH", marginError = 0.05, p = 0.5, alpha = 0.05, numCovar.1 = 5, numCovar.2 = NULL, R2.1 = 0.5, R2.2 = 0, ICC = 0, mod.type = "constant", omega = NULL,tnum = 10000, snum = 100, rho = 0.99, ncl = 2, updateProgress = NULL)
+mdes_blocked_i1_2c(M = 10, numFalse = 5, J = 10, n.j = 100, power = 0.75, power.definition = "indiv", MTP = "BH", marginError = 0.05, p = 0.5, alpha = 0.05, numCovar.1 = 5, numCovar.2 = NULL, R2.1 = 0.5, R2.2 = 0, ICC = 0, mod.type = "constant", omega = NULL,tnum = 10000, snum = 100, rho = 0.99, ncl = 2, updateProgress = NULL)
 ```
 
 ### Test case 3 for MDES-BH-indiv speed profile
@@ -279,7 +279,7 @@ Here compared to test case 2, we increase the number of samples to **1000**. The
 
 
 ```{r}
-MDES.blockedRCT.2(M = 10, numFalse = 5, J = 10, n.j = 100, power = 0.75, power.definition = "indiv", MTP = "BH", marginError = 0.05, p = 0.5, alpha = 0.05, numCovar.1 = 5, numCovar.2 = NULL, R2.1 = 0.5, R2.2 = 0, ICC = 0, mod.type = "constant", omega = NULL, rho = 0.99,tnum = 10000, snum = 1000, ncl = 2, updateProgress = NULL)
+mdes_blocked_i1_2c(M = 10, numFalse = 5, J = 10, n.j = 100, power = 0.75, power.definition = "indiv", MTP = "BH", marginError = 0.05, p = 0.5, alpha = 0.05, numCovar.1 = 5, numCovar.2 = NULL, R2.1 = 0.5, R2.2 = 0, ICC = 0, mod.type = "constant", omega = NULL, rho = 0.99,tnum = 10000, snum = 1000, ncl = 2, updateProgress = NULL)
 ```
 
 ### Test case 4 for MDES-BH-indiv speed profile
@@ -303,7 +303,7 @@ Here compared to test 3, we decreased the statistical power to **0.5** from **0.
 
 
 ```{r}
-MDES.blockedRCT.2(M = 10, numFalse = 5, J = 10, n.j = 100, power = 0.5, power.definition = "indiv", MTP = "BH", marginError = 0.05, p = 0.5, alpha = 0.05, numCovar.1 = 5, numCovar.2 = NULL, R2.1 = 0.5, R2.2 = 0, ICC = 0, mod.type = "constant", omega = NULL,tnum = 10000, rho = 0.99, snum = 1000, ncl = 2, updateProgress = NULL)
+mdes_blocked_i1_2c(M = 10, numFalse = 5, J = 10, n.j = 100, power = 0.5, power.definition = "indiv", MTP = "BH", marginError = 0.05, p = 0.5, alpha = 0.05, numCovar.1 = 5, numCovar.2 = NULL, R2.1 = 0.5, R2.2 = 0, ICC = 0, mod.type = "constant", omega = NULL,tnum = 10000, rho = 0.99, snum = 1000, ncl = 2, updateProgress = NULL)
 ```
 
 ### Test case 5 for MDES-BH-indiv speed profile
@@ -326,7 +326,7 @@ Here compared to test 4, we increase the actual impact of MDES to 10 from 3. The
 * power.definition = indiv
 
 ```{r}
-MDES.blockedRCT.2(M = 10, numFalse = 5, J = 10, n.j = 100, power = 0.5, power.definition = "indiv", MTP = "BH", marginError = 0.05, p = 0.5, alpha = 0.05, numCovar.1 = 5, numCovar.2 = NULL, R2.1 = 0.5, R2.2 = 0, ICC = 0, mod.type = "constant", omega = NULL,tnum = 10000,rho = 0.99, snum = 1000, ncl = 2, updateProgress = NULL)
+mdes_blocked_i1_2c(M = 10, numFalse = 5, J = 10, n.j = 100, power = 0.5, power.definition = "indiv", MTP = "BH", marginError = 0.05, p = 0.5, alpha = 0.05, numCovar.1 = 5, numCovar.2 = NULL, R2.1 = 0.5, R2.2 = 0, ICC = 0, mod.type = "constant", omega = NULL,tnum = 10000,rho = 0.99, snum = 1000, ncl = 2, updateProgress = NULL)
 ```
 
 ### Test case 6 for MDES-BH-indiv speed profile
@@ -349,7 +349,7 @@ In this test case, changed the definition of power from individual to 1-minimal.
 * power.definition = min1
 
 ```{r}
-MDES.blockedRCT.2(M = 10, numFalse = 5, J = 10, n.j = 100, power = 0.5, power.definition = "min1", MTP = "BH", marginError = 0.05, p = 0.5, alpha = 0.05, numCovar.1 = 5, numCovar.2 = NULL, R2.1 = 0.5, R2.2 = 0, ICC = 0, mod.type = "constant", omega = NULL,tnum = 10000, rho = 0.99, snum = 1000, ncl = 2, updateProgress = NULL)
+mdes_blocked_i1_2c(M = 10, numFalse = 5, J = 10, n.j = 100, power = 0.5, power.definition = "min1", MTP = "BH", marginError = 0.05, p = 0.5, alpha = 0.05, numCovar.1 = 5, numCovar.2 = NULL, R2.1 = 0.5, R2.2 = 0, ICC = 0, mod.type = "constant", omega = NULL,tnum = 10000, rho = 0.99, snum = 1000, ncl = 2, updateProgress = NULL)
 ```
 ### Test case 7-8-9 for MDES-BH-complete speed profile
 
@@ -372,7 +372,7 @@ A search for an optimal MDES at complete power is unsuccessful up to 45 iteratio
 * power.definition = complete
 
 ```{r}
-mdes.complete <- MDES.blockedRCT.2(M = 10, numFalse = 5, J = 10, n.j = 100, power = 0.5, power.definition = "complete", MTP = "BH", marginError = 0.05, p = 0.5, alpha = 0.05, numCovar.1 = 5, numCovar.2 = NULL, R2.1 = 0.5, R2.2 = 0, ICC = 0, mod.type = "constant", rho = 0.99, omega = NULL,tnum = 10000, snum = 1000, ncl = 2, updateProgress = NULL)
+mdes.complete <- mdes_blocked_i1_2c(M = 10, numFalse = 5, J = 10, n.j = 100, power = 0.5, power.definition = "complete", MTP = "BH", marginError = 0.05, p = 0.5, alpha = 0.05, numCovar.1 = 5, numCovar.2 = NULL, R2.1 = 0.5, R2.2 = 0, ICC = 0, mod.type = "constant", rho = 0.99, omega = NULL,tnum = 10000, snum = 1000, ncl = 2, updateProgress = NULL)
 ```
 
 ## Summary for MDES speed profiles for HO
@@ -400,7 +400,7 @@ For the first test case of Holms, we are starting right off with 10 blocks, a ha
 * power.definition = indiv
 
 ```{r}
-mdes.holm.indiv <- MDES.blockedRCT.2(M = 10, numFalse = 5,J = 10, n.j = 100, power = 0.80, power.definition = "indiv", MTP = "HO", marginError = 0.05, p = 0.5, alpha = 0.05, numCovar.1 = 5, numCovar.2 = NULL, R2.1 = 0.5, R2.2 = 0, ICC = 0, mod.type = "constant", omega = NULL,tnum = 10000, snum = 1000, ncl = 2, rho = 0.99, updateProgress = NULL)
+mdes.holm.indiv <- mdes_blocked_i1_2c(M = 10, numFalse = 5,J = 10, n.j = 100, power = 0.80, power.definition = "indiv", MTP = "HO", marginError = 0.05, p = 0.5, alpha = 0.05, numCovar.1 = 5, numCovar.2 = NULL, R2.1 = 0.5, R2.2 = 0, ICC = 0, mod.type = "constant", omega = NULL,tnum = 10000, snum = 1000, ncl = 2, rho = 0.99, updateProgress = NULL)
 print(mdes.holm.indiv)
 ```
 
@@ -424,7 +424,7 @@ For the second test case of Holms, we are starting right off with 10 blocks, a h
 * power.definition = min1
 
 ```{r}
-mdes.holm.min1 <- MDES.blockedRCT.2(M = 10, numFalse = 5, J = 10, n.j = 100, power = 0.80, power.definition = "min1", MTP = "HO", marginError = 0.05, p = 0.5, alpha = 0.05, numCovar.1 = 5, numCovar.2 = NULL, R2.1 = 0.5, R2.2 = 0, ICC = 0, mod.type = "constant", omega = NULL,tnum = 10000, rho = 0.99, snum = 1000, ncl = 2, updateProgress = NULL)
+mdes.holm.min1 <- mdes_blocked_i1_2c(M = 10, numFalse = 5, J = 10, n.j = 100, power = 0.80, power.definition = "min1", MTP = "HO", marginError = 0.05, p = 0.5, alpha = 0.05, numCovar.1 = 5, numCovar.2 = NULL, R2.1 = 0.5, R2.2 = 0, ICC = 0, mod.type = "constant", omega = NULL,tnum = 10000, rho = 0.99, snum = 1000, ncl = 2, updateProgress = NULL)
 print(mdes.holm.min1)
 ```
 
@@ -448,7 +448,7 @@ For the third test case of Holms, we are starting right off with 10 blocks, a ha
 * power.definition = complete
 
 ```{r}
-mdes.holm.complete.01 <- MDES.blockedRCT.2(M = 10, numFalse = 5,J = 10, n.j = 100, power = 0.80, power.definition = "complete", MTP = "HO", marginError = 0.05, p = 0.5, alpha = 0.05, numCovar.1 = 5, numCovar.2 = NULL, R2.1 = 0.5, R2.2 = 0, ICC = 0, mod.type = "constant", omega = NULL,tnum = 10000, rho = 0.99, snum = 1000, ncl = 2, updateProgress = NULL)
+mdes.holm.complete.01 <- mdes_blocked_i1_2c(M = 10, numFalse = 5,J = 10, n.j = 100, power = 0.80, power.definition = "complete", MTP = "HO", marginError = 0.05, p = 0.5, alpha = 0.05, numCovar.1 = 5, numCovar.2 = NULL, R2.1 = 0.5, R2.2 = 0, ICC = 0, mod.type = "constant", omega = NULL,tnum = 10000, rho = 0.99, snum = 1000, ncl = 2, updateProgress = NULL)
 print(mdes.holm.complete.01)
 ```
 
@@ -473,7 +473,7 @@ For the fourth test case of holms, we are starting right off with 10 blocks, a h
 
 ```{r}
 start <- Sys.time()
-mdes.holm.complete.02 <- MDES.blockedRCT.2(M = 10, numFalse = 10, J = 10, n.j = 100, power = 0.80, power.definition = "complete", MTP = "HO", marginError = 0.05, p = 0.5, alpha = 0.05, numCovar.1 = 5, numCovar.2 = NULL, R2.1 = 0.5, R2.2 = 0, ICC = 0, mod.type = "constant", omega = NULL,tnum = 10000, snum = 1000, rho = 0.99, ncl = 2, updateProgress = NULL)
+mdes.holm.complete.02 <- mdes_blocked_i1_2c(M = 10, numFalse = 10, J = 10, n.j = 100, power = 0.80, power.definition = "complete", MTP = "HO", marginError = 0.05, p = 0.5, alpha = 0.05, numCovar.1 = 5, numCovar.2 = NULL, R2.1 = 0.5, R2.2 = 0, ICC = 0, mod.type = "constant", omega = NULL,tnum = 10000, snum = 1000, rho = 0.99, ncl = 2, updateProgress = NULL)
 print(mdes.holm.complete.02)
 end <- Sys.time()
 elapsed <- end-start
@@ -502,7 +502,7 @@ For the first test case of Westfall-Young Single Step, we are starting right off
 * power.definition = indiv
 
 ```{r}
-mdes.wyss.indiv.10 <- MDES.blockedRCT.2(M = 10, numFalse = 5, J = 10, n.j = 100, power = 0.80, power.definition = "indiv", MTP = "WY-SS", marginError = 0.05, p = 0.5, alpha = 0.05, numCovar.1 = 5, numCovar.2 = NULL, R2.1 = 0.5, R2.2 = 0, ICC = 0, mod.type = "constant", omega = NULL,tnum = 10000, snum = 10, rho = 0.99, ncl = 2, updateProgress = NULL)
+mdes.wyss.indiv.10 <- mdes_blocked_i1_2c(M = 10, numFalse = 5, J = 10, n.j = 100, power = 0.80, power.definition = "indiv", MTP = "WY-SS", marginError = 0.05, p = 0.5, alpha = 0.05, numCovar.1 = 5, numCovar.2 = NULL, R2.1 = 0.5, R2.2 = 0, ICC = 0, mod.type = "constant", omega = NULL,tnum = 10000, snum = 10, rho = 0.99, ncl = 2, updateProgress = NULL)
 print(mdes.wyss.indiv.10)
 ```
 
@@ -526,7 +526,7 @@ For the first test case of Westfall-Young Single Step, we are starting right off
 * power.definition = indiv
 
 ```{r}
-mdes.wyss.indiv.20 <- MDES.blockedRCT.2(M = 10, numFalse = 5, J = 10, n.j = 100, power = 0.80, power.definition = "indiv", MTP = "WY-SS", marginError = 0.05, p = 0.5, alpha = 0.05, numCovar.1 = 5, numCovar.2 = NULL, R2.1 = 0.5, R2.2 = 0, ICC = 0, mod.type = "constant", omega = NULL,tnum = 10000, snum = 20, rho = 0.99, ncl = 2, updateProgress = NULL)
+mdes.wyss.indiv.20 <- mdes_blocked_i1_2c(M = 10, numFalse = 5, J = 10, n.j = 100, power = 0.80, power.definition = "indiv", MTP = "WY-SS", marginError = 0.05, p = 0.5, alpha = 0.05, numCovar.1 = 5, numCovar.2 = NULL, R2.1 = 0.5, R2.2 = 0, ICC = 0, mod.type = "constant", omega = NULL,tnum = 10000, snum = 20, rho = 0.99, ncl = 2, updateProgress = NULL)
 print(mdes.wyss.indiv.100)
 ```
 
@@ -551,7 +551,7 @@ For the third test case of Westfall-Young Single Step, we are starting right off
 * power.definition = indiv
 
 ```{r}
-mdes.wyss.indiv.100 <- MDES.blockedRCT.2(M = 10, numFalse = 10, J = 10, n.j = 100, power = 0.80, power.definition = "indiv", MTP = "WY-SS", marginError = 0.05, p = 0.5, alpha = 0.05, numCovar.1 = 5, numCovar.2 = NULL, R2.1 = 0.5, R2.2 = 0, ICC = 0, mod.type = "constant", omega = NULL,tnum = 10000, snum = 100, rho = 0.99, ncl = 2, updateProgress = NULL)
+mdes.wyss.indiv.100 <- mdes_blocked_i1_2c(M = 10, numFalse = 10, J = 10, n.j = 100, power = 0.80, power.definition = "indiv", MTP = "WY-SS", marginError = 0.05, p = 0.5, alpha = 0.05, numCovar.1 = 5, numCovar.2 = NULL, R2.1 = 0.5, R2.2 = 0, ICC = 0, mod.type = "constant", omega = NULL,tnum = 10000, snum = 100, rho = 0.99, ncl = 2, updateProgress = NULL)
 print(mdes.wyss.indiv.100)
 ```
 ### Test case 4 for MDES-Westfall-Young Single Step-indiv speed profile
@@ -575,7 +575,7 @@ For the fourth test case of Westfall-Young Single Step, we are starting right of
 
 ```{r}
 start <- Sys.time()
-mdes.wyss.indiv.500 <- MDES.blockedRCT.2(M = 10, numFalse = 10, J = 10, n.j = 100, power = 0.80, power.definition = "indiv", MTP = "WY-SS", marginError = 0.05, p = 0.5, alpha = 0.05, numCovar.1 = 5, numCovar.2 = NULL, R2.1 = 0.5, R2.2 = 0, ICC = 0, mod.type = "constant", omega = NULL,tnum = 10000, rho = 0.99, snum = 500, ncl = 2, updateProgress = NULL)
+mdes.wyss.indiv.500 <- mdes_blocked_i1_2c(M = 10, numFalse = 10, J = 10, n.j = 100, power = 0.80, power.definition = "indiv", MTP = "WY-SS", marginError = 0.05, p = 0.5, alpha = 0.05, numCovar.1 = 5, numCovar.2 = NULL, R2.1 = 0.5, R2.2 = 0, ICC = 0, mod.type = "constant", omega = NULL,tnum = 10000, rho = 0.99, snum = 500, ncl = 2, updateProgress = NULL)
 print(mdes.wyss.indiv.500)
 end <- Sys.time()
 elapsed <- end-start
@@ -604,7 +604,7 @@ For the fifth test case of Westfall-Young Single Step, we are starting right off
 
 ```{r}
 start <- Sys.time()
-mdes.wyss.indiv.1000 <- MDES.blockedRCT.2(M = 10, numFalse = 10, J = 10, n.j = 100, power = 0.80, power.definition = "indiv", MTP = "WY-SS", marginError = 0.05, p = 0.5, alpha = 0.05, numCovar.1 = 5, numCovar.2 = NULL, R2.1 = 0.5, R2.2 = 0, ICC = 0, mod.type = "constant", omega = NULL,tnum = 10000, rho = 0.99, snum = 1000, ncl = 2, updateProgress = NULL)
+mdes.wyss.indiv.1000 <- mdes_blocked_i1_2c(M = 10, numFalse = 10, J = 10, n.j = 100, power = 0.80, power.definition = "indiv", MTP = "WY-SS", marginError = 0.05, p = 0.5, alpha = 0.05, numCovar.1 = 5, numCovar.2 = NULL, R2.1 = 0.5, R2.2 = 0, ICC = 0, mod.type = "constant", omega = NULL,tnum = 10000, rho = 0.99, snum = 1000, ncl = 2, updateProgress = NULL)
 print(mdes.wyss.indiv.1000)
 end <- Sys.time()
 elapsed <- end-start
@@ -632,7 +632,7 @@ For the sixth test case of Westfall-Young Single Step, we are starting right off
 
 ```{r}
 start <- Sys.time()
-mdes.wyss.min1.1000 <- MDES.blockedRCT.2(M = 10, numFalse = 10, J = 10, n.j = 100, power = 0.80, power.definition = "min1", MTP = "WY-SS", marginError = 0.05, p = 0.5, alpha = 0.05, numCovar.1 = 5, numCovar.2 = NULL, R2.1 = 0.5, R2.2 = 0, ICC = 0, mod.type = "constant", omega = NULL,tnum = 10000, rho = 0.99, snum = 1000, ncl = 2, updateProgress = NULL)
+mdes.wyss.min1.1000 <- mdes_blocked_i1_2c(M = 10, numFalse = 10, J = 10, n.j = 100, power = 0.80, power.definition = "min1", MTP = "WY-SS", marginError = 0.05, p = 0.5, alpha = 0.05, numCovar.1 = 5, numCovar.2 = NULL, R2.1 = 0.5, R2.2 = 0, ICC = 0, mod.type = "constant", omega = NULL,tnum = 10000, rho = 0.99, snum = 1000, ncl = 2, updateProgress = NULL)
 print(mdes.wyss.min1.1000)
 end <- Sys.time()
 elapsed <- end-start
@@ -661,7 +661,7 @@ For the sixth test case of Westfall-Young Single Step, we are starting right off
 
 ```{r}
 start <- Sys.time()
-mdes.wyss.complete.1000 <- MDES.blockedRCT.2(M = 5, numFalse = 5, J = 10, n.j = 100, power = 0.80, power.definition = "complete", MTP = "WY-SS", marginError = 0.05, p = 0.5, alpha = 0.05, numCovar.1 = 5, numCovar.2 = NULL, R2.1 = 0.5, R2.2 = 0, ICC = 0, mod.type = "constant", omega = NULL,tnum = 10000, rho = 0.99, snum = 1000, ncl = 2, updateProgress = NULL)
+mdes.wyss.complete.1000 <- mdes_blocked_i1_2c(M = 5, numFalse = 5, J = 10, n.j = 100, power = 0.80, power.definition = "complete", MTP = "WY-SS", marginError = 0.05, p = 0.5, alpha = 0.05, numCovar.1 = 5, numCovar.2 = NULL, R2.1 = 0.5, R2.2 = 0, ICC = 0, mod.type = "constant", omega = NULL,tnum = 10000, rho = 0.99, snum = 1000, ncl = 2, updateProgress = NULL)
 print(mdes.wyss.complete.1000)
 end <- Sys.time()
 elapsed <- end-start
@@ -689,7 +689,7 @@ For the sixth test case of Westfall-Young Single Step, we are starting right off
 
 ```{r}
 start <- Sys.time()
-mdes.wyss.complete.1000 <- MDES.blockedRCT.2(M = 10, numFalse = 10, J = 10, n.j = 100, power = 0.80, power.definition = "complete", MTP = "WY-SS", marginError = 0.05, p = 0.5, alpha = 0.05, numCovar.1 = 5, numCovar.2 = NULL, R2.1 = 0.5, R2.2 = 0, ICC = 0, mod.type = "constant", omega = NULL,tnum = 10000, rho = 0.99, snum = 1000, ncl = 2, updateProgress = NULL)
+mdes.wyss.complete.1000 <- mdes_blocked_i1_2c(M = 10, numFalse = 10, J = 10, n.j = 100, power = 0.80, power.definition = "complete", MTP = "WY-SS", marginError = 0.05, p = 0.5, alpha = 0.05, numCovar.1 = 5, numCovar.2 = NULL, R2.1 = 0.5, R2.2 = 0, ICC = 0, mod.type = "constant", omega = NULL,tnum = 10000, rho = 0.99, snum = 1000, ncl = 2, updateProgress = NULL)
 print(mdes.wyss.complete.1000)
 end <- Sys.time()
 elapsed <- end-start
@@ -718,7 +718,7 @@ For test case 1 of Sample Size, we have
 * MDEFS = 0.125
 
 ```{r}
-test_case_1 <- SS.blockedRCT.2(M = 5, 
+test_case_1 <- sample_blocked_i1_2c(M = 5, 
                                numFalse = 5, 
                                typesample = "J", 
                                J = NULL, 
@@ -760,7 +760,7 @@ For test case 2 of Sample Size, we have
 * MDEFS = 0.125
 
 ```{r}
-test_case_2 <- SS.blockedRCT.2(M = 5, 
+test_case_2 <- sample_blocked_i1_2c(M = 5, 
                                numFalse = 5, 
                                typesample = "J", 
                                J = NULL, 
@@ -805,7 +805,7 @@ For test case 3 of Sample Size, we have
 * MDEFS = 0.125
 
 ```{r}
-test_case_3 <- SS.blockedRCT.2(M = 5, 
+test_case_3 <- sample_blocked_i1_2c(M = 5, 
                                numFalse = 5, 
                                typesample = "J", 
                                J = NULL, 
@@ -850,7 +850,7 @@ For test case 4 of Sample Size, we have
 * MDEFS = 0.125
 
 ```{r}
-test_case_4 <- SS.blockedRCT.2(M = 5, 
+test_case_4 <- sample_blocked_i1_2c(M = 5, 
                                numFalse = 5, 
                                typesample = "J", 
                                J = NULL, 
@@ -899,7 +899,7 @@ For test case 5 of Sample Size, we have
 * MDEFS = 0.125
 
 ```{r}
-test_case_5 <- SS.blockedRCT.2(M = 5, 
+test_case_5 <- sample_blocked_i1_2c(M = 5, 
                                numFalse = 5, 
                                typesample = "J", 
                                J = NULL, 
