--- a/Validation/Validation_power_blocked_i1_2c.Rmd
+++ b/Validation/Validation_power_blocked_i1_2c.Rmd
@@ -6,7 +6,7 @@ output: github_document
 
 ### Libraries and Source Files
 
-```{r libaries}
+```{r libaries, warnings = FALSE, message = FALSE}
 library(RcppEigen) # Linear algebra calculations
 library(snow)      # Parallelization and use of multiple clusters 
 library(lme4)      # Linear mixed effect models
@@ -25,10 +25,50 @@ source(here::here("Validation/Simulations", "power_mcs_2_levels.R")) # Estimate 
 
 ### Parameters for Monte Carlo Simulation Runs
 
-#### Subtitle: Type of Function we are validating
+#### Validating
 
-```{r}
+* rho
+* ncl
+* procs
+* design
+* M
+* MDES
+* p.j.range
+* S
+* B
+* J
+* n.j
+* theta
+* omega
+* Gamma
+* sig.sq
+* alpha
+* ICC
+* R2.2
+* R2.1
 
+```{r validation_parameter_specifications}
+
+rho <- c(0,0.2,0.5,0.8)
+ncl <-8
+procs <- c("Bonferroni", "BH", "Holm","WY") 
+design <- c("Blocked_i1_2c", "Blocked_i1_2f", "Blocked_i1_2r")
+M <- 2
+MDES <- rep(0.125, M)
+p.j.range <- c(0.5,0.5)
+S = 2000
+B = 10000
+J = 20
+n.j = 100
+theta <- matrix(0,M,M) 
+diag(theta) <- 0 
+omega <- rep(0,M)
+Gamma.00 <- rep(0,M)
+sig.sq <- rep(1,M)
+alpha <- 0.05
+ICC <- rep(0, M) 
+R2.2 <- rep(0,M) 
+R2.1 <- rep(0, M)
 ```
 
 
