mdes minimum powers are established to be wrong

--- a/Validation/Validation_power_mdes_sample_blocked_i1_2c.Rmd
+++ b/Validation/Validation_power_mdes_sample_blocked_i1_2c.Rmd
@@ -14,6 +14,7 @@ library(PowerUpR)  # Comparison with another package that has some limitations
 library(multtest)  # Multiple Testing Procedures package
 library(tictoc)    # For timing of the scripts
 library(here)      # For relative path sourcing
+library(pum)       # For Power Under Multiplicity Package
 ```
 
 ```{r sourcefiles}
@@ -115,37 +116,64 @@ toc()
 print(power_M6_MDES0125)
 ```
 
+### MDES for Individual Power is working
+
 ```{r}
 tic()
-mdes_0125_bonf <- pum::mdes_blocked_i1_2c(M = 6, numFalse = 6,J = 20, n.j = 100, power = 0.9053167,
+mdes_0125_bonf_indiv <- pum::mdes_blocked_i1_2c(M = 6, numFalse = 6,J = 20, n.j = 100, power = 0.9053167,
                                           power.definition = "indiv", MTP = "BF", marginError = 0.05,
                                           p = 0.5, alpha = 0.05, numCovar.1 = 5, numCovar.2 = NULL,
                                           R2.1 = 0.5, R2.2 = 0, ICC = 0, mod.type = "constant", 
                                           rho = 0.5, omega = NULL,tnum = 10000, snum = 2000, ncl = 8)
 toc()
-print(mdes_0125_bonf)
+print(mdes_0125_bonf_indiv)
 ```
 
 ```{r}
 tic()
-mdes_0125_bh <- pum::mdes_blocked_i1_2c(M = 6, numFalse = 6,J = 20, n.j = 100, power = 0.9730000,
+mdes_0125_bh_indiv <- pum::mdes_blocked_i1_2c(M = 6, numFalse = 6,J = 20, n.j = 100, power = 0.9730000,
                                           power.definition = "indiv", MTP = "BH", marginError = 0.05,
                                           p = 0.5, alpha = 0.05, numCovar.1 = 5, numCovar.2 = NULL,
                                           R2.1 = 0.5, R2.2 = 0, ICC = 0, mod.type = "constant", 
                                           rho = 0.5, omega = NULL,tnum = 10000, snum = 2000, ncl = 8)
 toc()
-print(mdes_0125_bh)
+print(mdes_0125_bh_indiv)
 ```
 
 ```{r}
 tic()
-mdes_0125_holms <- pum::mdes_blocked_i1_2c(M = 6, numFalse = 6,J = 20, n.j = 100, power = 0.9593667,
+mdes_0125_holms_indiv <- pum::mdes_blocked_i1_2c(M = 6, numFalse = 6,J = 20, n.j = 100, power = 0.9593667,
                                           power.definition = "indiv", MTP = "HO", marginError = 0.05,
                                           p = 0.5, alpha = 0.05, numCovar.1 = 5, numCovar.2 = NULL,
                                           R2.1 = 0.5, R2.2 = 0, ICC = 0, mod.type = "constant", 
                                           rho = 0.5, omega = NULL,tnum = 10000, snum = 2000, ncl = 8)
 toc()
-print(mdes_0125_holms)
+print(mdes_0125_holms_indiv)
+```
+
+
+### Non-Individual Power for MDES is NOT working
+
+```{r}
+tic()
+mdes_0125_holms_indiv1 <- pum::mdes_blocked_i1_2c(M = 6, numFalse = 6,J = 20, n.j = 100, power = 0.9603,
+                                          power.definition = "indiv1", MTP = "HO", marginError = 0.05,
+                                          p = 0.5, alpha = 0.05, numCovar.1 = 5, numCovar.2 = NULL,
+                                          R2.1 = 0.5, R2.2 = 0, ICC = 0, mod.type = "constant", 
+                                          rho = 0.5, omega = NULL,tnum = 10000, snum = 2000, ncl = 8)
+toc()
+print(mdes_0125_holms_indiv1)
+```
+
+```{r}
+tic()
+mdes_0125_holms_min1 <- pum::mdes_blocked_i1_2c(M = 6, numFalse = 6,J = 20, n.j = 100, power = 0.9962,
+                                          power.definition = "min1", MTP = "HO", marginError = 0.05,
+                                          p = 0.5, alpha = 0.05, numCovar.1 = 5, numCovar.2 = NULL,
+                                          R2.1 = 0.5, R2.2 = 0, ICC = 0, mod.type = "constant", 
+                                          rho = 0.5, omega = NULL,tnum = 10000, snum = 2000, ncl = 8)
+toc()
+print(mdes_0125_holms_min1)
 ```
 
 ## Sample Function Validation
@@ -231,7 +259,7 @@ print(sample_HO_J_20)
 ```{r}
 sample_HO_nj_100 <- sample_blocked_i1_2c(M = 6, numFalse = 6, typesample = "n.j", J = 20, n.j = NULL, 
                                     J0 = NULL, n.j0 = 50, MDES = 0.125, power = 0.9575333 ,
-                                    power.definition = "indiv", MTP = "BH", marginError = 0.05,
+                                    power.definition = "indiv", MTP = "HO", marginError = 0.05,
                                     p = 0.5,alpha = 0.05,numCovar.1 = 5,numCovar.2 = 1,
                                     R2.1 = 0.5,tnum = 10000, snum = 2000, ncl = 8)
 print(sample_HO_nj_100)
